[project]
name = "my-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sean O'Reilly", email = "seansoreilly@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "a2a-samples",
    "click>=8.1.8",
    "google-a2a",
]

[project.scripts]
my-project = "my_project:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
a2a-samples = { git = "https://github.com/google/A2A", subdirectory = "samples/python" }
google-a2a = { git = "https://github.com/djsamseng/A2A.git", subdirectory = "samples/python", rev = "prefixPythonPackage" }
